--- a/lib/_core/index.sass
+++ b/lib/_core/index.sass
@@ -1,9 +1,9 @@
 @import ../_includes
-@import url('https://fonts.googleapis.com/css?family=Montserrat:100,200,300,400,500,600,700i,800i,900i')
+@import url('https://fonts.googleapis.com/css?family=Saira:400,500,600,700,800,900')
 // +font-face('CenturyGothic', "../fonts/", "CenturyGothic")
 
 html, body
-	font-family: 'Montserrat', sans-serif
+	font-family: 'Saira', sans-serif
 	font-size: 14px
 	font-weight: 500
 	height: 100%
