--- a/lib/footer/f-1/index.sass
+++ b/lib/footer/f-1/index.sass
@@ -4,72 +4,33 @@
 //////////////////////////////////////
 
 .canhcam-footer-1
-	background-color: darken(color-get($mau,trang) ,85%)
+	background-color: darken(color-get($mau,trang) ,0%)
 	position: relative
 	z-index: 1
-	color: darken(color-get($mau,trang) ,50%)
+	color: darken(color-get($mau,text-1) ,0%)
 	overflow: hidden
 	+media-breakpoint-down(xs)
+	.mt-2r
+		margin-top: 2rem!important
 	h4
 		text-transform: uppercase
-		color: color-get($mau,trang)
+		color: color-get($mau,text-1)
 		position: relative
 		+fz(1rem)
-		margin-bottom: 1.5rem
-		&:after
-			width: 40px
-			height: 1px
-			background: color-get($mau,main)
-			content: ''
-			display: block
-			+pos(abs, null null -10px 0)
+		margin-bottom: 1.2rem
 
 	.linkfooter
-		padding: 3rem 0 2rem
+		padding: 0 0 2rem
+		.partner
+			+pad(1rem null)
+			border-bottom: 1px solid color-rgba(color-get($mau,xam-1),.5)
 		.list-group
 			.list-group-item
 				display: inline-block
 				+bg(none, none, none)
 				border: 0
-				+pad(.5rem 0)
+				+pad(.3rem 0)
 				+media-breakpoint-up(md)
-					+pad(.15rem 0)
 				a
 					font-size: .9rem
-					+link(darken(color-get($mau,trang),15%),color-get($mau,main),color-get($mau,main))
-		.socials
-			h4
-				&:after
-					+pos(abs, null null -10px 50%)
-					+transform(translateX(-50%))
-					+media-breakpoint-up(md)
-						+pos(abs, null null -10px 50%)
-						+transform(translateX(-50%))
-					+media-breakpoint-up(lg)
-						+pos(abs, null null -10px 0)
-						+transform(translateX(0))
-			.social-list
-				+media-breakpoint-down(sm)
-					+mar(2rem null null null)
-				.list-inline
-					+mar(0)
-					.list-inline-item
-						+fz(.9rem)
-						+link(darken(color-get($mau,trang), 85%), color-get($mau,trang), color-get($mau,trang))
-						+mar(null 1rem null null)
-						a
-							display: block
-							height: 2rem
-							width: 2rem
-							+lh(2rem)
-							+bg(darken(color-get($mau,trang),40%), color-get($mau,main), color-get($mau,main))
-							+link(darken(color-get($mau,trang),85%), darken(color-get($mau,trang),0%))
-							+border-radius(50%)
-							text-align: center
-							i
-								+lh(2rem)
-						&:last-child
-							+mar(0)
-	.copyright
-		padding: 1rem
-		background-color: darken(color-get($mau,trang) ,95%)
+					+link(darken(color-get($mau,text-2),0%),color-get($mau,main),color-get($mau,main))
