--- a/lib/footer/f-7/index.pug
+++ b/lib/footer/f-7/index.pug
@@ -2,51 +2,44 @@ footer.canhcam-footer-7
 	.footer-content
 		.container
 			.row.justify-content-between
-				.col-md-5.col-lg-6
-					.slogan.text-center.text-md-left
-						.logo 
-							a.mb-4(href="")
-								img(src="./img/logo-trang.png", alt="logo")
-						.quote.mb-4.mb-md-0 
-							h6.h6 COMPANY
-							.text Lorem ipsum dolor sit amet consectetur adipisicing elit. Quos eius itaque quidem saepe, magni enim in ea eum odit fuga. Nisi molestias perferendis numquam vel itaque consequatur vitae a et.
-							.social-list
-								ul.list-inline.text-center.text-md-left
-									li.list-inline-item
-										a(href='https://www.linkedin.com/baonguyenyam', target='_blank')
-											i.fab.fa-linkedin(ga-action-click='', data-value='Linkedin', data-label='Linkedin', data-action='Linkedin')
-									li.list-inline-item
-										a(href='https://www.facebook.com/baonguyenyam', target='_blank')
-											i.fab.fa-facebook-f(ga-action-click='', data-value='Facebook', data-label='Facebook', data-action='Facebook')
-									li.list-inline-item
-										a(href='https://www.twitter.com/baonguyenyam', target='_blank')
-											i.fab.fa-twitter(ga-action-click='', data-value='Twitter', data-label='Twitter', data-action='Twitter')
-									li.list-inline-item
-										a(href='https://www.google.com/+baonguyenyam', target='_blank')
-											i.fab.fa-google(ga-action-click='', data-value='Google', data-label='Google', data-action='Google')
+				.col.text-center.text-md-left
+					img.img-fluid(src='./img/antuong/logo_2.png')
+				.col-12.col-lg-3.text-center.text-md-left.mt-5.mt-md-0
+					.footer-nav
+						h6 Công ty TNHH An Tường Real
+						p Tòa nhà Charmington La Pointe - 181 Cao Thắng, P. 12, Q. 10, TP. HCM
+						.info
+							p
+								em.mr-3.mdi.mdi-fax
+								| nfo@antuongreal.vn
+							p
+								em.mr-3.mdi.mdi-email
+								| nfo@antuongreal.vn
+				.col-12.col-lg-3.mt-5.mt-md-0
+					.footer-nav.text-center.text-lg-left
+						h6.text-center.text-md-left Kết nối với chung tôi
+						.social
+							a(href="#")
+								em.fab.fa-facebook-f
+							a(href="#")
+								em.fab.fa-youtube
+							a(href="#")
+								em.fab.fa-google
+						.phone.mt-3 0122 9999
+							
+				.col-12.col-lg-3.mt-5.mt-md-0
+					.footer-nav
+						h6.text-center.text-md-left Đăng ký nhận bản tin
+						p Đăng kí nhận những cập nhật mới nhất về bất động sản & Tip kiếm tiền online hiệu quả với An Tường Real.
+						.search.d-flex
+							input.form-control(type='text', placeholder="Địa chỉ email...", aria-label="Search", aria-describedby='basic-addon2')
 
-				.col-sm-6.col-md
-					.footer-nav
-						h6.text-center.text-md-left MENU INFO
-						nav.list-group.text-center.text-md-left
-							.list-group-item
-								a(href="#") Textile
-							.list-group-item
-								a(href="#") Caps
-							.list-group-item
-								a(href="#") Golf Bags
-				.col-sm-6.col-md.mt-3.mt-sm-0
-					.footer-nav
-						h6.text-center.text-md-left MENU INFO
-						nav.list-group.text-center.text-md-left
-							.list-group-item
-								a(href="#") Textile
-							.list-group-item
-								a(href="#") Caps
-							.list-group-item
-								a(href="#") Golf Bags
 	.copy-right
 		.container
 			.row
-				.col-12.text-center
+				.col-lg-3
+					.link
+						a(href="#") Chính sách bảo mật
+						a(href="#") Sơ đồ trang
+				.col
 					span © 2018 ABC.,Ltd . All Rights Reserved. Designed by Cánh Cam.
