--- a/lib/header/h-14/index.sass
+++ b/lib/header/h-14/index.sass
@@ -15,29 +15,7 @@
 		z-index: 999
 		transition: all .25s ease-in-out
 		&.active , &.expand
-	.language
-		margin-bottom: 0 
-		display: flex
-		+mar(0)
-		+pad(0)
-		li 
-			list-style: none
-			img 
-				max-height: 1.5rem
-			+ li 
-				margin-right: .5rem
-			a 
-				color: lighten(color-get($mau,main),0%)
-				text-decoration: none
-				+pad(0.5rem 1rem)
-				justify-content: center
-				display: flex
-				span 
-					margin-left: .5rem
-			&:hover, &.active, &.show
-				a
-					color: color-get($mau,extra)
-	.contactinfo, .social
+	.contactinfo
 		margin-bottom: 0 
 		display: flex
 		+mar(0)
@@ -47,73 +25,104 @@
 		li 
 			list-style: none
 			a, .link
-				color: lighten(color-get($mau,main),30%)
 				display: inline-block
 				text-decoration: none
-				+pad(0.5rem 1rem)
-			&:hover, &.active, &.show
-				a
-					color: color-get($mau,trang)
-	.social
-		flex-direction: row
-	.searchbar
-		+pad(1rem)
-		color: lighten(color-get($mau,main),30%)
-		.input-group
-			width: 100%
-			input, button
-				+bor-rad(0)
-			input
-				border: 1px solid color-get($mau,trang)
-			button
-				background: darken(color-get($mau,trang),0%)
-				color: color-get($mau,main)
-				border-color: darken(color-get($mau,trang),0%)
 	.advbar
 		+mar(0)
 		+pad(0)
+		
 		li 
 			list-style: none
 			+pad(0.5rem 1rem)
+			+media-breakpoint-up(lg)
+				+pad(.3rem 1rem)
 			a, .link
-				color: lighten(color-get($mau,main),30%)
-				display: flex
 				align-items: center
 				text-decoration: none
-				border: 1px solid lighten(color-get($mau,main),30%)
-				+pad(.75rem 1rem)
 				em 
-					+fz(1.5rem)
+					+fz(1rem)
+					+pad(.5rem)
+					height: 100%
+					width: 30px
+					text-align: center
+					background: darken(color-get($mau,trang),10%)
 				.textinfo
-					padding-left: .5rem
-			&:hover, &.active, &.show
-				a
+				&.phone
+					margin-right: 1.5rem
+					+fw(500)
+					+fz(1.5rem)
+					display: flex
 					color: color-get($mau,trang)
+					&:before
+						content: ''
+						width: 25px
+						align-self: center
+						margin-right: .5rem
+						display: inline-block
+						height: 25px
+						background: url('../img/antuong/phone.png') no-repeat
+					+media-breakpoint-up(lg)
+						color: color-get($mau,den)
+			&.social
+				margin-left: 0
+				flex-direction: row
+				a
+					+ a
+						margin-left: .5rem
+					.fa-facebook-f
+						color: color-get($icon,facebook)
+					.fa-youtube
+						color: color-get($icon,youtube)
+			&.button
+				a
+					+pad(.4rem 2rem .3rem 2rem)
+					&.register, &.login
+						background: darken(color-get($mau,trang),10%)
+						color: color-get($mau,den)
+					&.login
+						margin-left: 1rem
+				+media-breakpoint-up(lg)
+					padding-top: .3rem
+					a
+						+pad(.4rem 2rem 0 2rem)
+						&.register
+							background: color-get($mau,main)
+							color: color-get($mau,trang)
+						&.login
+							margin-left: .3rem
+							background: color-get($mau,extra)
+							color: color-get($mau,den)
 	.k-menu-bar
 		color: color-get($mau,main)
 		.k-button-toggle
 			color: color-get($mau,main)
 		.navbar-brand
 			img
-				max-height: 2rem
+				max-height: 3rem
 		.nav
 			.nav-item
 				.nav-link
 					color: color-get($mau,main)
 
 	.k-responsive-menu
-		background: color-get($mau,main)
+		background: color-get($mau,text-1)
 		.navbar-brand
 			color: color-get($mau,trang)
 			img
-				max-height: 2rem
+				max-height: 3rem
 		.nav
 			.nav-item
 				.nav-link
-					color: lighten(color-get($mau,main),30%)
-				&:hover, &.active, &.show
+					height: 100%
+					color: lighten(color-get($mau,trang),0%)
+					&.home
+						height: auto
+						+fz(1.5rem)
+						margin-top: -8px
+				&.active
 					.nav-link
-						color: color-get($mau,trang)
+						color: color-get($mau,extra)
+				
 		.k-menu-bar
 			.k-button-toggle
 				color: color-get($mau,trang)
@@ -121,43 +130,6 @@
 	// CHANGE MENU
 
 	+media-breakpoint-up(lg)
-		.topbar
-			justify-content: flex-end
-			display: flex
-			height: 38px
-			+transition(.3s all ease-in-out)
-			.contactinfo, .language, .social
-				display: flex
-				flex-direction: row
-				align-items: center
-				li 
-					color: darken(color-get($mau,trang),50%)
-					+ li 
-						margin-right: 0
-					a, .link
-						color: darken(color-get($mau,trang),50%)
-						+pad(.75rem .5rem)
-						&:hover
-							color: darken(color-get($mau,main),0%)
-						em 
-							width: 1rem
-							text-align: center
-			.searchbar
-				overflow: hidden
-				display: flex
-				+pad(0)
-				justify-content: flex-end
-				+transition(.3s all ease-in-out)
-				margin-left: .5rem
-				margin-top: 0.35rem 
-				margin-bottom: 0.35rem 
-				.input-group
-					border: 1px solid lighten(color-get($mau,den),60%)
-					width: auto
-					overflow: hidden
-					input, button
-						+pad(0.15rem .5rem)
-						color: lighten(color-get($mau,den),60%)
 		.k-responsive-menu
 			background: color-get($mau,trang)
 			padding-top: 0
@@ -183,11 +155,13 @@
 								font-weight: 900
 								vertical-align: initial
 					.nav-link
-						color: lighten(color-get($mau,den),40%)
+						color: color-get($mau,text-1)
 						+pad(1rem 0)
 					&:hover, &.active, &.show
 						.nav-link
+							padding-bottom: .8rem
 							color: color-get($mau,extra)
+						border-bottom: 3px color-get($mau,extra) solid
 					.dropdown-menu
 						.dropdown-item
 							color: lighten(color-get($mau,den),40%)
@@ -199,7 +173,6 @@
 				.advbar
 					overflow: hidden
 					display: flex
-					height: 52px
 					+pad(0)
 					justify-content: flex-end
 					+transition(.3s all ease-in-out)
@@ -208,11 +181,8 @@
 						padding-left: 0
 						padding-bottom: 0
 						+ li 
-							margin-left: .5rem
+							margin-left: .3rem
 						a, .link 
-							color: color-get($mau,main)
-							border-color: color-get($mau,main)
-							background: color-rgba(color-get($mau,main),.2)
 					.input-group
 						height: 52px
 						border: 1px solid lighten(color-get($mau,den),60%)
@@ -235,7 +205,7 @@
 		.k-responsive-menu
 			.navbar-brand
 				img 
-					max-height: 3.5rem
+					max-height: 5rem
 					max-width: 250px
 			.nav
 				.nav-item
