--- a/lib/boxes/b-1/index.pug
+++ b/lib/boxes/b-1/index.pug
@@ -4,43 +4,19 @@ section.canhcam-boxes-1
 		.row.no-gutters.boxes-details
 			.item.col-md-6.col-lg-4
 				.row.no-gutters
-					.col-auto
-						i.mdi.mdi-basket-fill
-					.col
-						h3 Lorem ipsum dolor sit.
+					.col.text-center
+						img.img-fluid.mb-5(src='./img/antuong/home/home_icon_1.png')
+						h3 Đăng ký cộng tác viên
 						p Rerum totam dolor tenetur! Numquam sequi animi ex ut aliquid dolores. Ad facere placeat vero accusantium natus earum illo, fugit eligendi ipsam!
 			.item.col-md-6.col-lg-4
 				.row.no-gutters
-					.col-auto
-						i.mdi.mdi-cart-outline
-					.col
-						h3 Consectetur adipisicing elit.
-						p Rerum totam dolor tenetur! Numquam sequi animi ex ut aliquid dolores. Ad facere placeat vero accusantium natus earum illo, fugit eligendi ipsam!
+					.col.text-center
+						img.img-fluid.mb-5(src='./img/antuong/home/home_icon_2.png')
+						h3 Bán sản phẩm
+						p Rerum totam dolor tenetur! Numquam sequi animi ex ut aliquid dolores. Ad facere placeat vero accusantium na
 			.item.col-md-6.col-lg-4
 				.row.no-gutters
-					.col-auto
-						i.mdi.mdi-comment-multiple-outline
-					.col
-						h3 Lorem ipsum r adipisicing elit.
-						p Rerum totam dolor tenetur! Numquam sequi animi ex ut aliquid dolores. Ad facere placeat vero accusantium natus earum illo, fugit eligendi ipsam!
-			.item.col-md-6.col-lg-4
-				.row.no-gutters
-					.col-auto
-						i.mdi.mdi-credit-card-multiple
-					.col
-						h3 Lorctetur adipisicing elit.
-						p Rerum totam dolor tenetur! Numquam sequi animi ex ut aliquid dolores. Ad facere placeat vero accusantium natus earum illo, fugit eligendi ipsam!
-			.item.col-md-6.col-lg-4
-				.row.no-gutters
-					.col-auto
-						i.mdi.mdi-deskphone
-					.col
-						h3 Lorem ipsum dolor sit amet conng elit.
-						p Rerum totam dolor tenetur! Numquam sequi animi ex ut aliquid dolores. Ad facere placeat vero accusantium natus earum illo, fugit eligendi ipsam!
-			.item.col-md-6.col-lg-4
-				.row.no-gutters
-					.col-auto
-						i.mdi.mdi-email-open-outline
-					.col
-						h3 Lorem ipsum dolor sit amet consectetur adipisicing elit.
-						p Rerum totam dolor tenetur! Numquam sequi animi ex ut aliquid dolores. Ad facere placeat vero accusantium natus earum illo, fugit eligendi ipsam!
+					.col.text-center
+						img.img-fluid.mb-5(src='./img/antuong/home/home_icon_3.png')
+						h3 Nhận hoa hồng
+						p Rerum totam dolor tenetur! Numquam sequi animi ex ut al
