--- a/lib/boxes/b-1/index.sass
+++ b/lib/boxes/b-1/index.sass
@@ -4,33 +4,27 @@
 //////////////////////////////////////
 
 .canhcam-boxes-1
-	background: darken(color-get($mau,trang),5%)
 	+pad(2rem 0)
 	+media-breakpoint-up(lg)
 		+pad(4rem 0)
 	.boxes-details
 		background: color-get($mau,trang)
 		+bor-rad(.35rem)
-		+box-sha(0 0 .15rem 0 rgba(0, 0, 0, 0.125))
 		overflow: hidden
 		.item
+			position: relative
 			+pad(3rem)
-			border-top: 1px solid darken(color-get($mau,trang),5%)
-			&:first-child
-				border-top: 0
-			+media-breakpoint-up(md)
-				border-right: 1px solid darken(color-get($mau,trang),5%)
-				&:nth-child(2)
-					border-top: 0
-				&:nth-child(2n)
-					border-right: 0
+			&:after
+				content: ''
+				background: url('../img/antuong/next.png') no-repeat
+				height: 50px
+				width: 30px
+				+pos(abs, 50% 0 null null)
+
 			+media-breakpoint-up(lg)
-				&:nth-child(3)
-					border-top: 0
-				&:nth-child(2n)
-					border-right: 1px solid darken(color-get($mau,trang),5%)
-				&:nth-child(3n)
-					border-right: 0
+				p
+					max-width: 80%
+					margin: auto
 			i
 				+fz(4rem)
 				+lh(4rem)
@@ -38,12 +32,12 @@
 				margin-right: 1rem
 				color: color-get($mau,main)
 			h3
-				font-weight: 400
-				letter-spacing: 1px
-				+fz(1.3rem)
-				color: color-get($mau,main)
+				font-weight: 500
+				+fz(1.1rem)
+				color: color-get($mau,den)
 			p
 				font-size: 1rem
+				margin-top: 1rem
 				font-weight: 300
 				color: darken(color-get($mau,trang),50%)
 			&:hover
