--- a/templates/index.pug
+++ b/templates/index.pug
@@ -7,6 +7,7 @@ block variables
 block header
 	include ../lib/header/h-14/index.pug
 block body
+	include ../lib/banner/b-1/index.pug
 	include ../lib/boxes/b-1/index.pug
 block footer
 	include ../lib/footer/f-1/index.pug
