--- a/lib/_core/index.sass
+++ b/lib/_core/index.sass
@@ -212,5 +212,19 @@ header
 					+pos(abs, -20px 1.2rem null initial)
 				&:after
 					+pos(abs, -19px 1.2rem null initial)
+.antuong-title
+	+fz(1.5rem)
+	text-align: center
+	+fw(700)
+	+media-breakpoint-up(lg)
+		+fz(2rem)
+a.btn-more
+	+pad(.5rem 1rem)
+	+bor-rad(5px)
+	+bor(null, solid color-get($mau,main),2px)
+	color: color-get($mau,main)
+	&:hover
+		background: color-get($mau,main)
+		color: color-get($mau,trang)
 
 
