--- a/lib/boxes/b-1/index.pug
+++ b/lib/boxes/b-1/index.pug
@@ -1,22 +1,23 @@
 section.canhcam-boxes-1
-	article.container
-
+	article.container.text-center
+		h1.antuong-title 3 bước kiếm thu nhập cùng An Tường Real
 		.row.no-gutters.boxes-details
-			.item.col-md-6.col-lg-4
+			.item.col-lg-4.col-12
 				.row.no-gutters
 					.col.text-center
 						img.img-fluid.mb-5(src='./img/antuong/home/home_icon_1.png')
 						h3 Đăng ký cộng tác viên
 						p Rerum totam dolor tenetur! Numquam sequi animi ex ut aliquid dolores. Ad facere placeat vero accusantium natus earum illo, fugit eligendi ipsam!
-			.item.col-md-6.col-lg-4
+			.item.col-lg-4.col-12
 				.row.no-gutters
 					.col.text-center
 						img.img-fluid.mb-5(src='./img/antuong/home/home_icon_2.png')
 						h3 Bán sản phẩm
 						p Rerum totam dolor tenetur! Numquam sequi animi ex ut aliquid dolores. Ad facere placeat vero accusantium na
-			.item.col-md-6.col-lg-4
+			.item.col-lg-4.col-12
 				.row.no-gutters
 					.col.text-center
 						img.img-fluid.mb-5(src='./img/antuong/home/home_icon_3.png')
 						h3 Nhận hoa hồng
 						p Rerum totam dolor tenetur! Numquam sequi animi ex ut al
+		a.btn.btn-more(href="#") Xem thêm
