--- a/lib/footer/f-7/index.pug
+++ b/lib/footer/f-7/index.pug
@@ -2,9 +2,9 @@ footer.canhcam-footer-7
 	.footer-content
 		.container
 			.row.justify-content-between
-				.col.text-center.text-md-left
+				.col.text-center.text-lg-left
 					img.img-fluid(src='./img/antuong/logo_2.png')
-				.col-12.col-lg-3.text-center.text-md-left.mt-5.mt-md-0
+				.col-12.col-lg-3.text-center.text-lg-left.mt-5.mt-lg-0
 					.footer-nav
 						h6 Công ty TNHH An Tường Real
 						p Tòa nhà Charmington La Pointe - 181 Cao Thắng, P. 12, Q. 10, TP. HCM
@@ -15,9 +15,9 @@ footer.canhcam-footer-7
 							p
 								em.mr-3.mdi.mdi-email
 								| nfo@antuongreal.vn
-				.col-12.col-lg-3.mt-5.mt-md-0
+				.col-12.col-lg-3.mt-5.mt-lg-0
 					.footer-nav.text-center.text-lg-left
-						h6.text-center.text-md-left Kết nối với chung tôi
+						h6.text-center.text-lg-left Kết nối với chung tôi
 						.social
 							a(href="#")
 								em.fab.fa-facebook-f
@@ -27,9 +27,9 @@ footer.canhcam-footer-7
 								em.fab.fa-google
 						.phone.mt-3 0122 9999
 							
-				.col-12.col-lg-3.mt-5.mt-md-0
+				.col-12.col-lg-3.mt-5.mt-lg-0
 					.footer-nav
-						h6.text-center.text-md-left Đăng ký nhận bản tin
+						h6.text-center.text-lg-left Đăng ký nhận bản tin
 						p Đăng kí nhận những cập nhật mới nhất về bất động sản & Tip kiếm tiền online hiệu quả với An Tường Real.
 						.search.d-flex
 							input.form-control(type='text', placeholder="Địa chỉ email...", aria-label="Search", aria-describedby='basic-addon2')
