--- a/lib/footer/f-7/index.sass
+++ b/lib/footer/f-7/index.sass
@@ -19,7 +19,7 @@
 		color: lighten(color-get($mau,text-1), 0%)
 		font-weight: 400
 		h6
-			font-size: 1rem 
+			font-size: 1.2rem 
 			margin-bottom: 1rem 
 			color: lighten(color-get($mau,text-1), 0%) 
 		p
@@ -39,7 +39,7 @@
 				em
 					+fz(1.3rem)
 					color: color-get($mau,text-2)
-			+media-breakpoint-up(md)
+			+media-breakpoint-up(lg)
 				align-items: flex-start
 		.social
 			margin-top: 2rem
@@ -72,7 +72,7 @@
 				display: inline-block
 				height: 25px
 				background: url('../img/antuong/phone.png') no-repeat
-			+media-breakpoint-up(md)
+			+media-breakpoint-up(lg)
 				justify-content: initial
 		.list-group
 			.list-group-item
