--- a/templates/index.pug
+++ b/templates/index.pug
@@ -9,6 +9,10 @@ block header
 block body
 	include ../lib/banner/b-1/index.pug
 	include ../lib/boxes/b-1/index.pug
+	include ../lib/home/h-1/index.pug
+	include ../lib/home/h-2/index.pug
+	include ../lib/home/h-3/index.pug
+	include ../lib/home/h-4/index.pug
 block footer
 	include ../lib/footer/f-1/index.pug
 	include ../lib/footer/f-7/index.pug
