--- a/lib/_core/index.sass
+++ b/lib/_core/index.sass
@@ -213,18 +213,19 @@ header
 				&:after
 					+pos(abs, -19px 1.2rem null initial)
 .antuong-title
-	+fz(1.5rem)
+	+fz(2rem)
 	text-align: center
 	+fw(700)
 	+media-breakpoint-up(lg)
-		+fz(2rem)
+		+fz(2.5rem)
 a.btn-more
-	+pad(.5rem 1rem)
+	+pad(.5rem 2.5rem)
 	+bor-rad(5px)
+	text-transform: uppercase
+	+fw(500)
 	+bor(null, solid color-get($mau,main),2px)
 	color: color-get($mau,main)
 	&:hover
 		background: color-get($mau,main)
 		color: color-get($mau,trang)
-
 
