--- a/lib/home/h-2/index.pug
+++ b/lib/home/h-2/index.pug
@@ -1,15 +1,88 @@
-section.canhcam-tabs-2
+section.canhcam-home-2
 	.container
+		h1.antuong-title.mb-5 Chương Trình nổi bật
 		.row
 			.col
 				ul#ccTabs.nav.nav-tabs.justify-content-center(role="tablist")
 					li.nav-item
-						a#cct-01-tab.nav-link.active(data-toggle="tab" href="#cct-01" role="tab" aria-controls="cct-01" aria-selected="true") Home
+						a#cct-01-tab.nav-link.active(data-toggle="tab" href="#cct-01" role="tab" aria-controls="cct-01" aria-selected="true") Mới nhất
 					li.nav-item
-						a#cct-02-tab.nav-link(data-toggle="tab" href="#cct-02" role="tab" aria-controls="cct-02" aria-selected="false") Profile
+						a#cct-02-tab.nav-link(data-toggle="tab" href="#cct-02" role="tab" aria-controls="cct-02" aria-selected="false") Mua bán
 					li.nav-item
-						a#cct-03-tab.nav-link(data-toggle="tab" href="#cct-03" role="tab" aria-controls="cct-03" aria-selected="false") Contact
+						a#cct-03-tab.nav-link(data-toggle="tab" href="#cct-03" role="tab" aria-controls="cct-03" aria-selected="false") Cho thuê
 				#ccTabsContent.tab-content
-					#cct-01.tab-pane.fade.show.active(role="tabpanel" aria-labelledby="cct-01-tab") Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nulla, recusandae modi consequuntur voluptas voluptatibus dolore sed repellat illo eos quos rem. Earum amet fugit quidem nostrum qui voluptatibus quae.
+					#cct-01.tab-pane.fade.show.active(role="tabpanel" aria-labelledby="cct-01-tab") 
+						.row
+							.col-lg-3.col-12.col-md-4
+								a.item(href="#")
+									figure
+										.boxzoom
+											img.img-fluid.w-100(src="./img/antuong/home/home_1.png", alt="")
+										figcaption
+											h5 Một căn hộ được 100 triệu với dự án Himlam An Phú
+											p Xem thêm
+							.col-lg-3.col-12.col-md-4
+								a.item(href="#")
+									figure
+										.boxzoom
+											img.img-fluid.w-100(src="./img/antuong/home/home_1.png", alt="")
+										figcaption
+											h5 Một căn hộ được 100 triệu với dự án Himlam An Phú
+											p Xem thêm
+							.col-lg-3.col-12.col-md-4
+								a.item(href="#")
+									figure
+										.boxzoom
+											img.img-fluid.w-100(src="./img/antuong/home/home_1.png", alt="")
+										figcaption
+											h5 Một căn hộ được 100 triệu với dự án Himlam An Phú
+											p Xem thêm
+							.col-lg-3.col-12.col-md-4
+								a.item(href="#")
+									figure
+										.boxzoom
+											img.img-fluid.w-100(src="./img/antuong/home/home_1.png", alt="")
+										figcaption
+											h5 Một căn hộ được 100 triệu với dự án Himlam An Phú
+											p Xem thêm
+							.col-lg-3.col-12.col-md-4
+								a.item(href="#")
+									figure
+										.boxzoom
+											img.img-fluid.w-100(src="./img/antuong/home/home_1.png", alt="")
+										figcaption
+											h5 Một căn hộ được 100 triệu với dự án Himlam An Phú
+											p Xem thêm
+							.col-lg-3.col-12.col-md-4
+								a.item(href="#")
+									figure
+										.boxzoom
+											img.img-fluid.w-100(src="./img/antuong/home/home_1.png", alt="")
+										figcaption
+											h5 Một căn hộ được 100 triệu với dự án Himlam An Phú
+											p Xem thêm
+							.col-lg-3.col-12.col-md-4
+								a.item(href="#")
+									figure
+										.boxzoom
+											img.img-fluid.w-100(src="./img/antuong/home/home_1.png", alt="")
+										figcaption
+											h5 Một căn hộ được 100 triệu với dự án Himlam An Phú
+											p Xem thêm
+							.col-lg-3.col-12.col-md-4
+								a.item(href="#")
+									figure
+										.boxzoom
+											img.img-fluid.w-100(src="./img/antuong/home/home_1.png", alt="")
+										figcaption
+											h5 Một căn hộ được 100 triệu với dự án Himlam An Phú
+											p Xem thêm
 					#cct-02.tab-pane.fade(role="tabpanel" aria-labelledby="cct-02-tab") Eveniet nulla, recusandae modi consequuntur voluptas voluptatibus dolore sed repellat illo eos quos rem. Earum amet fugit quidem nostrum qui voluptatibus quae.
 					#cct-03.tab-pane.fade(role="tabpanel" aria-labelledby="cct-03-tab") Recusandae modi consequuntur voluptas voluptatibus dolore sed repellat illo eos quos rem. Earum amet fugit quidem nostrum qui voluptatibus quae.
+		.contact.d-flex.justify-content-center(bg-img='./img/antuong/bg_1.png')
+			.content
+				h3 Bạn là cộng tác viên?
+				p tăng doanh số bán hàng cùng an tường real
+			.button.d-flex.mt-3.mt-md-0
+				a.btn.btn-contact(href="#") Liên hệ ngay
+
