--- a/lib/home/h-4/index.pug
+++ b/lib/home/h-4/index.pug
@@ -1,25 +1,24 @@
-section.canhcam-boxes-3
+section.canhcam-home-4(bg-img='./img/antuong/bg_3.png')
 	.container.number
 		.row.justify-content-center
-			.col-lg-12
-				.row.no-gutters.align-items-stretch
-					.col-sm-6
-						.item.d-flex.align-items-center.justify-content-center
-							.content.d-flex
-								.count
-									h5(class="counter", data-duration="8000", data-count="2350") 0
-									span
-										| +
-								.text
-									img(src="./img/antuong/home/home_icon_8.png", alt="")
-									p Lorem ipsum dolor sit
-					
-					.col-sm-6
-						.item.d-flex.align-items-center.justify-content-center
-							figure
-								i.mdi.mdi-credit-card-multiple
-								figcaption
-									h3
-										span(class="counter", data-duration="8000", data-count="5465") 0
-									p Employees
-						
+			.col-sm-5
+				.item.d-flex.align-items-center.justify-content-center
+					.content.d-lg-flex
+						.count
+							h5(class="counter", data-duration="8000", data-count="2350") 0
+							span
+								| +
+						.text.mt-4.text-center.text-lg-left
+							img(src="./img/antuong/home/home_icon_8.png", alt="")
+							p Lorem ipsum dolor sit jolor sit j
+			
+			.col-sm-5.mt-5.mt-lg-0
+				.item.d-flex.align-items-center.justify-content-center
+					.content.d-lg-flex
+						.count
+							h5(class="counter", data-duration="8000", data-count="2350") 0
+							span
+								| +
+						.text.mt-4.text-center.text-lg-left
+							img(src="./img/antuong/home/home_icon_8.png", alt="")
+							p Lorem ipsum dolor sit jolor sit j
