--- a/lib/boxes/b-1/index.sass
+++ b/lib/boxes/b-1/index.sass
@@ -4,7 +4,9 @@
 //////////////////////////////////////
 
 .canhcam-boxes-1
-	+pad(3rem 0)
+	+pad(3rem null)
+	+media-breakpoint-up(lg)
+		+pad(4rem null)
 	.boxes-details
 		background: color-get($mau,trang)
 		+bor-rad(.35rem)
