--- a/lib/footer/f-1/index.pug
+++ b/lib/footer/f-1/index.pug
@@ -15,7 +15,7 @@ footer.canhcam-footer-1
 						img.img-fluid(src="./img/antuong/partner.png", alt="")
 					.col-4.col-md-2
 						img.img-fluid(src="./img/antuong/partner.png", alt="")
-			.row.mt-2r
+			.row.my-5
 				.col-md-3.col-12.text-center.text-md-left
 					h4 Giới thiệu
 					nav.list-group
