--- a/lib/footer/f-7/index.sass
+++ b/lib/footer/f-7/index.sass
@@ -6,7 +6,6 @@
 .canhcam-footer-7
 	background: darken(color-get($mau,trang), 5%)
 	position: relative
-	+pad(2rem null 0)
 	&:before
 		content: ''
 		height: 3px
@@ -16,7 +15,7 @@
 		background-position: center center
 		background-size: cover
 	.footer-content
-		padding-bottom: 3rem
+		+pad(3rem null)
 		color: lighten(color-get($mau,text-1), 0%)
 		font-weight: 400
 		h6
