--- a/lib/home/h-2/index.sass
+++ b/lib/home/h-2/index.sass
@@ -4,7 +4,9 @@
 //////////////////////////////////////
 
 .canhcam-home-2
-	+pad(3rem 0)
+	+pad(3rem null)
+	+media-breakpoint-up(lg)
+		+pad(4rem null)
 	.nav-tabs
 		position: relative
 		border-bottom: 0
