--- a/lib/home/h-3/index.sass
+++ b/lib/home/h-3/index.sass
@@ -5,6 +5,8 @@
 	
 section.canhcam-home-3
 	+pad(3rem null)
+	+media-breakpoint-up(lg)
+		+pad(4rem null)
 	background: darken(color-get($mau,trang),5%)
 	.item
 		text-decoration: none
