--- a/lib/home/h-4/index.sass
+++ b/lib/home/h-4/index.sass
@@ -4,7 +4,9 @@
 //////////////////////////////////////
 
 .canhcam-home-4
-	+pad(3rem 0)
+	+pad(3rem null)
+	+media-breakpoint-up(lg)
+		+pad(4rem null)
 	.number
 		.item
 			min-height: 180px
