--- a/lib/breadcrumb/b-1/index.pug
+++ b/lib/breadcrumb/b-1/index.pug
@@ -1,11 +1,12 @@
 section.canhcam-breadcrumb-1
 	article.owl-carousel.owl-theme.list-items
-		.item(bg-img-responsive="./img/bg/sub-2.jpg", bg-img-responsive-sm="./img/bg/sub-2.jpg", bg-img-responsive-xs="./img/bg/sub-2.jpg")
+		.item(bg-img='./img/antuong/breadcrumb_1.png')
 	.main-breadcrumb
 		.container
 			ol.breadcrumb
 				li.breadcrumb-item
-					a(href='#') Home
+					a(href='#')
+						em.mdi.mdi-home
 				li.breadcrumb-item
 					a(href='#') Library
 				li.breadcrumb-item.active(aria-current='page') Data
