--- a/lib/home/h-1/index.sass
+++ b/lib/home/h-1/index.sass
@@ -4,7 +4,9 @@
 //////////////////////////////////////
 	
 section.canhcam-home-1
-	+pad(3rem null 0)
+	+pad(3rem null)
+	+media-breakpoint-up(lg)
+		+pad(4rem null)
 	.row
 		margin-top: 2rem
 		.about
