--- a/templates/about.pug
+++ b/templates/about.pug
@@ -7,8 +7,12 @@ block variables
 block header
 	include ../lib/header/h-14/index.pug
 block body
-	include ../lib/boxes/b-1/index.pug
-	include ../lib/boxes/b-2/index.pug
+	include ../lib/breadcrumb/b-1/index.pug
+	include ../lib/about/a-1/index.pug
+	include ../lib/about/a-2/index.pug
+	include ../lib/about/a-3/index.pug
+	include ../lib/about/a-4/index.pug
+	include ../lib/bonus/b-1/index.pug
 block footer
 	include ../lib/footer/f-1/index.pug
 	include ../lib/footer/f-7/index.pug
