--- a/lib/about/a-4/index.pug
+++ b/lib/about/a-4/index.pug
@@ -2,9 +2,9 @@ section.canhcam-about-4
 	.container
 		.row
 			.col-lg-6
-				img.img-fluid(src='./img/antuong/about/about_4.png')
+				img.img-fluid.w-100(src='./img/antuong/about/about_4.png')
 			.col-lg-6
-				.content
+				.content.mt-5.mt-lg-0
 					h1.antuong-title.upcase.mb-4.left cam kết cộng đồng
 					p Gắn kết với cộng đồng, vì cộng đồng và chia sẻ thành công với cộng đồng là những nghĩa cử cao đẹp đã được toàn thể cán bộ, công nhân viên An Tường Real thực hiện. Mỗi thành viên trong An Tường Real luôn ý thức sâu sắc trách nhiệm gắn bó và chia sẻ với cộng đồng bằng những hành động thiết thực.
 					p Gắn kết với cộng đồng, vì cộng đồng và chia sẻ thành công với cộng đồng là những nghĩa cử cao đẹp đã được toàn thể cán bộ, công nhân viên An Tường Real thực hiện. Mỗi thành viên trong An Tường Real luôn ý thức sâu sắc trách nhiệm gắn bó và chia sẻ với cộng đồng bằng những hành động thiết thực.
