update nav about

--- a/lib/about/a-1/index.pug
+++ b/lib/about/a-1/index.pug
@@ -1,4 +1,4 @@
-section.canhcam-about-1
+section.canhcam-about-1#canhcam-about-section-1
 	.container
 		h1.antuong-title.mb-5.upcase Về chúng tôi
 		.row
