--- a/lib/about/a-2/index.pug
+++ b/lib/about/a-2/index.pug
@@ -1,4 +1,4 @@
-section.canhcam-about-2(bg-img='./img/antuong/about/about_bg_2.png')
+section.canhcam-about-2#canhcam-about-section-2(bg-img='./img/antuong/about/about_bg_2.png')
 	.container
 		h1.antuong-title.white.upcase.mb-5 tầm nhìn - sứ mệnh - giá trị cốt lõi
 		.row
