--- a/lib/about/a-3/index.pug
+++ b/lib/about/a-3/index.pug
@@ -1,4 +1,4 @@
-section.canhcam-about-3
+section.canhcam-about-3#canhcam-about-section-3
 	.container
 		h1.antuong-title.upcase.mb-5 hội đồng thành viên
 		.row
