--- a/templates/about.pug
+++ b/templates/about.pug
@@ -8,6 +8,7 @@ block header
 	include ../lib/header/h-14/index.pug
 block body
 	include ../lib/breadcrumb/b-1/index.pug
+	include ../lib/nav/n-1/index.pug
 	include ../lib/about/a-1/index.pug
 	include ../lib/about/a-2/index.pug
 	include ../lib/about/a-3/index.pug
