--- a/lib/pagination/p-1/index.pug
+++ b/lib/pagination/p-1/index.pug
@@ -1,11 +1,8 @@
 section.canhcam-pagination-1
 	.container
 		.row.pagelist
-			.col.d-flex.align-items-center.justify-content-center.justify-content-md-end
+			.col.d-flex.align-items-center.justify-content-center
 				ul.pagination
-					li.page-item
-						a.page-link(href="#", title="title")
-							i.fa.fa-chevron-left
 					li.page-item
 						a.page-link(href="#", title="title") 1
 					li.page-item.active
@@ -14,6 +11,3 @@ section.canhcam-pagination-1
 						a.page-link(href="#", title="title") 3
 					li.page-item
 						a.page-link(href="#", title="title") 4
-					li.page-item
-						a.page-link(href="#", title="title")
-							i.fa.fa-chevron-right
