--- a/lib/project/p-1/index.sass
+++ b/lib/project/p-1/index.sass
@@ -8,23 +8,47 @@ section.canhcam-project-1
 	+media-breakpoint-up(lg)
 		+pad(4rem null null null)
 	.select
-		display: flex
 		+pad(1.5rem 2rem)
 		background: color-get($mau,main)
 		position: relative
-		select
-			width: 250px
-			+pad(.5rem 1rem)
+		
+		.sl-city, .sl-district
+			position: relative
+			&:after
+				content: '\e874'
+				font-family: 'LinearIcons-Free'
+				color: color-rgba(color-get($mau,trang),.8)
+				+pos(abs,0 1rem null null)
+				+transform(translate(-50%,50%))
+			select
+				height: 100%
+				width: 100%
+				+pad(.5rem 1rem)
+				+bor-rad(5px)
+				background: none
+				color: color-rgba(color-get($mau,trang),.8)
+				+bor(null, solid color-rgba(color-get($mau,trang),.8),1px)
+				-webkit-appearance: none
+				-moz-appearance: none
+				&:focus
+					+bor(null, solid color-get($mau,trang),1px)
+					color: color-rgba(color-get($mau,trang),1)
+					box-shadow: 0
+					+fw(600)
+				option
+					color: color-get($mau,text-1)
+				+media-breakpoint-up(lg)
+					width: 250px
+		.sl-district
+		a.btn-search
+			+pad(.4rem 3rem)
+			background-image: -moz-linear-gradient( 90deg, rgb(255,199,30) 0%, rgb(255,215,95) 100%)
+			background-image: -webkit-linear-gradient( 90deg, rgb(255,199,30) 0%, rgb(255,215,95) 100%)
+			background-image: -ms-linear-gradient( 90deg, rgb(255,199,30) 0%, rgb(255,215,95) 100%)
+			color: color-get($mau,text-1)
+			+fz(1.3rem)
 			+bor-rad(5px)
-			background: none
-			color: color-rgba(color-get($mau,trang),.8)
-			+bor(null, solid color-rgba(color-get($mau,trang),.8),1px)
-			&:focus
-				+bor(null, solid color-get($mau,trang),1px)
-				color: color-rgba(color-get($mau,trang),1)
-				box-shadow: 0
-				+fw(600)
-			option
-				color: color-get($mau,text-1)
-			&.sl-district
-				margin-left: 1rem
+			+fw(600)
+			&:hover
+				background: color-get($mau,trang)
+				color: color-get($mau,extra)
