--- a/templates/project-detail.pug
+++ b/templates/project-detail.pug
@@ -4,6 +4,20 @@ block variables
 	- var description = "Description for project-detail page"
 	- var bodyclass = "project-detail"
 	- var href = "/project-detail.html"
+block header
+	include ../lib/header/h-14/index.pug
 block body
 	include ../lib/breadcrumb/b-1/index.pug
-	include ../lib/pagination/p-1/index.pug
+	include ../lib/project-detail/p-1/index.pug
+	include ../lib/project-detail/p-2/index.pug
+	include ../lib/project-detail/p-3/index.pug
+	include ../lib/project-detail/p-4/index.pug
+	include ../lib/project-detail/p-5/index.pug
+	include ../lib/project-detail/p-6/index.pug
+	include ../lib/project-detail/p-7/index.pug
+	include ../lib/project-detail/p-8/index.pug
+	include ../lib/project-detail/p-9/index.pug
+	include ../lib/bonus/b-1/index.pug
+block footer
+	include ../lib/footer/f-1/index.pug
+	include ../lib/footer/f-7/index.pug
