--- a/lib/project-detail/p-2/index.pug
+++ b/lib/project-detail/p-2/index.pug
@@ -1,6 +1,6 @@
-section.canhcam-project-detail-2
+section.canhcam-project-detail-2#canhcam-detail-section-2
 	.container
-		h1.antuong-title.upcase.mb-5 vị trí
+		h1.antuong-title.upcase.mb-4.mb-lg-5 vị trí
 		.row
 			.col-lg-6
 				.content
