--- a/lib/project-detail/p-3/index.pug
+++ b/lib/project-detail/p-3/index.pug
@@ -1,4 +1,4 @@
-section.canhcam-project-detail-3(bg-img='./img/antuong/project_detail/detail_bg.png')
+section.canhcam-project-detail-3(bg-img='./img/antuong/project_detail/detail_bg.png')#canhcam-detail-section-3
 	.container
 		h1.antuong-title.upcase.mb-3 Mặt bằng
 		.row
