--- a/lib/project-detail/p-4/index.pug
+++ b/lib/project-detail/p-4/index.pug
@@ -1,4 +1,4 @@
-section.canhcam-project-detail-4
+section.canhcam-project-detail-4#canhcam-detail-section-4
 	.container
 		h1.antuong-title.upcase.mb-3 Tiện ích
 		.row
@@ -16,22 +16,37 @@ section.canhcam-project-detail-4
 									p Với tiêu chuẩn sống dành cho giới thượng lưu, biệt thự The Venica Khang Điền đem đến những dịch vụ cao cấp như Fitness Club trang bị hiện đại có tầm nhìn ra hồ bơi, sân vườn. Bên cạnh đó, công viên cây xanh xung quanh dự án kết hợp các đường dạo, đi bộ tập thể dục song hành với với hệ thống sông rạch bao quanh tạo nên một không gian sống an lành. Cư dân có thể thưởng thức và thư giãn ngay tại khu bar – cafe ngay cạnh hồ bơi tràn rộng hơn 200m2 có thiết kế độc đáo pool-bar giữa hồ bơi. Toàn bộ hạ tầng kỹ thuật khu biệt thự Venica Khang Điền được ngầm hoá và phủ xanh bởi cây bóng mát, thảm cỏ, hoa các loại tạo sự hài hoà với kiến trúc tăng giá trị thẩm mỹ. Đường trục chính lộ giới 20m thông thoáng, kết nối các đường nội bộ 12m tiếp cận lối vào từng nhà. Cổng chính vào và cầu dẫn vào dự án rộng thoáng là điểm nhấn gây ấn tượng đầu tiên cho các gia chủ.
 							.col-lg-8.order-lg-1.mt-4.mt-lg-0
 								.row
-									.col-8
-										img.img-fluid(src="./img/antuong/project_detail/detail_4.png", alt="")
-									.col-4
-										.row
-											.col-12
-												img.img-fluid(src="./img/antuong/project_detail/detail_4.png", alt="")
-										.row.mt-20p
-											.col-12
-												img.img-fluid(src="./img/antuong/project_detail/detail_4.png", alt="")
-								.row.mt-20p
-									.col-4
-										img.img-fluid(src="./img/antuong/project_detail/detail_4.png", alt="")
-									.col-4
-										img.img-fluid(src="./img/antuong/project_detail/detail_4.png", alt="")
-									.col-4
-										img.img-fluid(src="./img/antuong/project_detail/detail_4.png", alt="")
+									.col-md-8.top-project
+										.item(data-src="./img/antuong/project_detail/detail_4.png")
+											figure(bg-img="./img/antuong/project_detail/detail_4.png")
+												a(href="./img/antuong/project_detail/detail_4.png")
+													img.img-fluid(src="./img/antuong/project_detail/detail_4.png", alt="alt")
+									.col-md-4.part-list
+										.item.mt-20p.mt-md-0(data-src="./img/antuong/project_detail/detail_4.png")
+											figure(bg-img="./img/antuong/project_detail/detail_4.png")
+												a(href="./img/antuong/project_detail/detail_4.png")
+													img.img-fluid(src="./img/antuong/project_detail/detail_4.png", alt="alt")
+										.item.mt-20p(data-src="./img/antuong/project_detail/detail_5.png")
+											figure(bg-img="./img/antuong/project_detail/detail_5.png")
+												a(href="./img/antuong/project_detail/detail_9.png")
+													img.img-fluid(src="./img/antuong/project_detail/detail_9.png", alt="alt")
+								.row.mt-4
+									.col-lg-4
+										.item(data-src="./img/antuong/project_detail/detail_9.png")
+											figure(bg-img="./img/antuong/project_detail/detail_9.png")
+												a(href="./img/antuong/project_detail/detail_9.png")
+													img.img-fluid(src="./img/antuong/project_detail/detail_9.png", alt="alt")
+									.col-lg-4
+										.item(data-src="./img/antuong/project_detail/detail_9.png")
+											figure(bg-img="./img/antuong/project_detail/detail_9.png")
+												a(href="./img/antuong/project_detail/detail_9.png")
+													img.img-fluid(src="./img/antuong/project_detail/detail_9.png", alt="alt")
+									.col-lg-4
+										.item(data-src="./img/antuong/project_detail/detail_9.png")
+											figure(bg-img="./img/antuong/project_detail/detail_9.png")
+												a(href="./img/antuong/project_detail/detail_9.png")
+													img.img-fluid(src="./img/antuong/project_detail/detail_9.png", alt="alt")
+
 							
 					#location-02.tab-pane.fade(role="tabpanel" aria-labelledby="cct-02-tab")
 						img.img-fluid.w-100(src="./img/antuong/project_detail/detail_3.png", alt="")
