--- a/lib/project-detail/p-4/index.sass
+++ b/lib/project-detail/p-4/index.sass
@@ -12,6 +12,8 @@ section.canhcam-project-detail-4
 		margin-top: 20px
 	.nav-tabs
 		border: 0
+		
+
 		.nav-item
 			position: relative
 			margin-right: .25rem
@@ -48,3 +50,5 @@ section.canhcam-project-detail-4
 				color: color-get($mau,text-2)
 				p
 					margin-bottom: 0
+		figure
+			margin-bottom: 0
