--- a/lib/project-detail/p-6/index.pug
+++ b/lib/project-detail/p-6/index.pug
@@ -1,2 +1,12 @@
-section.canhcam-project-detail-6
+section.canhcam-project-detail-6#canhcam-detail-section-6
 	.container
+		h1.antuong-title.upcase.mb-4.mb-lg-5 phương thức thanh toán
+		.row
+			.col-lg-6
+				.content
+					p Thanh toán theo tiến độ trong vòng 2 năm, khách hàng chỉ phải thanh toán 50% đến khi nhận nhà… Là những điểm nổi trội trong phương thức thanh toán tại Green Town Bình Tân
+					h5 CHÍNH SÁCH TỐT, ƯU ĐÃI HẤP DẪN
+					p Khách hàng sẽ dễ dàng sở hữu căn hộ Green Town khi lựa chọn được căn hộ ưng ý và phù hợp khách hàng chỉ cần thanh toán 120 triệu là có thể sở hữu chính xác căn đã lựa chọn.
+					p Để đảm bảo cho chất lượng và tiến độ công trình, tiến độ thanh toán đối với dự án khách hàng chỉ thanh toán 50% cho đến khi nhận nhà. Quyền lợi của khách hàng khi thấy căn hộ của mình đã hoàn thiện mới đóng tiếp 45%. 5% còn lại khách hàng thanh toán khi nhận được sổ đỏ ( 18 tháng sau khi nhận bàn giao căn hộ )
+			.col-lg-6
+				img.img-fluid.w-100(src="./img/antuong/project_detail/detail_7.png", alt="")
