--- a/lib/project-detail/p-5/index.pug
+++ b/lib/project-detail/p-5/index.pug
@@ -1,35 +1,34 @@
-section.canhcam-project_detail-5
+section.canhcam-project_detail-5#canhcam-detail-section-5
 	.container
-		.row
-			.col.text-center
-				h2.h2.mb-5 Lorem
-		.row
-			.col
-				article.owl-carousel.carousel-1.owl-theme.list-items
-					.item
-						h5 Tháng 1
-					.item
-						h5 Tháng 2
-					.item
-						h5 Tháng 3
-					.item
-						h5 Tháng 4
-					.item
-						h5 Tháng 5
-					.item
-						h5 Tháng 6
-					.item
-						h5 Tháng 7
-					.item
-						h5 Tháng 8
-					.item
-						h5 Tháng 9
-					.item
-						h5 Tháng 10
-					.item
-						h5 Tháng 11
-					.item
-						h5 Tháng 12
+		h1.antuong-title.upcase.mb-4.mb-lg-5 tiến độ dự án
+		.slidemonth.mb-4
+			.row
+				.col
+					article.owl-carousel.carousel-1.owl-theme.list-items
+						.item
+							h5 Tháng 1
+						.item
+							h5 Tháng 2
+						.item
+							h5 Tháng 3
+						.item
+							h5 Tháng 4
+						.item
+							h5 Tháng 5
+						.item
+							h5 Tháng 6
+						.item
+							h5 Tháng 7
+						.item
+							h5 Tháng 8
+						.item
+							h5 Tháng 9
+						.item
+							h5 Tháng 10
+						.item
+							h5 Tháng 11
+						.item
+							h5 Tháng 12
 		.row
 			.col
 				article.owl-carousel.carousel-2.owl-theme.list-items
