--- a/templates/project-detail.pug
+++ b/templates/project-detail.pug
@@ -8,6 +8,7 @@ block header
 	include ../lib/header/h-14/index.pug
 block body
 	include ../lib/breadcrumb/b-1/index.pug
+	include ../lib/nav/n-2/index.pug
 	include ../lib/project-detail/p-1/index.pug
 	include ../lib/project-detail/p-2/index.pug
 	include ../lib/project-detail/p-3/index.pug
