--- a/lib/nav/n-3/index.sass
+++ b/lib/nav/n-3/index.sass
@@ -5,7 +5,7 @@
 
 
 
-.canhcam-nav-2
+.canhcam-nav-3
 	position: sticky
 	position: -webkit-sticky
 	top: 63px
@@ -35,11 +35,11 @@
 					z-index: 1
 					display: block
 					box-sizing: border-box
-					+pad(1rem)
+					+pad(.6rem 3rem)
 					color: darken(color-get($mau,trang),50%)
 					text-decoration: none
 					position: relative
-					+fz(1rem)
+					+fz(1.1rem)
 					+fw(400)
 					+transition(all 0.3s ease-in-out)
 					&:after
