--- a/lib/project-detail/p-1/index.sass
+++ b/lib/project-detail/p-1/index.sass
@@ -19,6 +19,7 @@ section.canhcam-project-detail-1
 		justify-content: flex-end
 
 		.content
+			+fw(400)
 			max-height: 240px
 			overflow-y: scroll
 			&::-webkit-scrollbar-track
