--- a/lib/project-detail/p-2/index.sass
+++ b/lib/project-detail/p-2/index.sass
@@ -9,6 +9,7 @@ section.canhcam-project-detail-2
 	+media-breakpoint-up(lg)
 		+pad(4rem null)
 	.content
+		+fw(400)
 		color: color-get($mau,text-2)
 		ul
 			margin-left: -20px
