--- a/lib/project-detail/p-4/index.sass
+++ b/lib/project-detail/p-4/index.sass
@@ -47,6 +47,7 @@ section.canhcam-project-detail-4
 		.tab-pane
 			+pad(1rem)
 			.content
+				+fw(400)
 				color: color-get($mau,text-2)
 				p
 					margin-bottom: 0
