--- a/lib/project-detail/p-8/index.sass
+++ b/lib/project-detail/p-8/index.sass
@@ -14,6 +14,7 @@
 			+pad(3rem 1rem)
 			+bor(null, solid color-get($mau,main),1px)
 	.content
+		+fw(400)
 		padding-top: 8rem
 		margin-top: -6rem
 		+pad(null 2rem 2rem)
