--- a/lib/sale/s-2/index.sass
+++ b/lib/sale/s-2/index.sass
@@ -3,7 +3,7 @@
 // CODE
 //////////////////////////////////////
 
-section.canhcam-project-2
+section.canhcam-sale-2
 	+pad(2rem null)
 	a.item
 		text-decoration: none
@@ -31,6 +31,11 @@ section.canhcam-project-2
 				p
 					margin-bottom: 0
 					color: color-get($mau,text-2)
+					+ p
+						margin-left: 1rem
+					em
+						color: color-get($mau,text-3)
+
 				span
 					color: color-get($mau,main)
 					+fw(500)
