--- a/lib/nav/n-1/index.sass
+++ b/lib/nav/n-1/index.sass
@@ -49,6 +49,7 @@
 				
 					&.active,&:hover
 						color: color-get($mau,text-1)
+						+fw(600)
 						background: color-get($mau,extra)
 						&:after
 							display: none
